--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Каталог</title>
     <meta name="description" content="">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <script>
       document.querySelector('html').classList.replace('no-js', 'js');
       'ontouchstart'in window ? document.querySelector('html').classList.add('touch') : document.querySelector('html').classList.add('no-touch');
@@ -405,18 +406,11 @@
         <section class="popular">
           <div class="popular__inner">
             <h2 class="popular__title">Популярные книги по этой теме</h2>
-            <div class="popular__slider" id="popular-slider">
-              <button class="popular__slider-btn popular__slider-btn--left" id="popular-slider-left">
-                <svg width="34" height="23">
-                  <use xlink:href="#arrow-left"></use>
-                </svg>
-              </button>
-              <button class="popular__slider-btn popular__slider-btn--right" id="popular-slider-right">
-                <svg width="34" height="23">
-                  <use xlink:href="#arrow-right"></use>
-                </svg>
-              </button>
-              <div class="popular__slide">
+            <div class="swiper-container">
+
+            <div class="popular__slider swiper-wrapper" id="popular-slider">
+             
+              <div class="popular__slide swiper-slide">
                 <article class="card">
                   <a class="card__inner" href="index.html#klienty-na-vsyu-zhizn">
                     <img class="card__img" src="img/klienty-na-vsyu-zhizn.jpg" width="148" height="208" alt="Клиенты на всю жизнь"/>
@@ -432,7 +426,7 @@
                   </button>
                 </article>
               </div>
-              <div class="popular__slide">
+              <div class="popular__slide swiper-slide">
                 <article class="card">
                   <a class="card__inner" href="index.html#tsennye-resheniya">
                     <img class="card__img" src="img/tsennye-resheniya.jpg" width="148" height="208" alt="Ценные решения"/>
@@ -448,7 +442,7 @@
                   </button>
                 </article>
               </div>
-              <div class="popular__slide">
+              <div class="popular__slide swiper-slide">
                 <article class="card">
                   <a class="card__inner" href="index.html#na-kryuchke">
                     <img class="card__img" src="img/na-kryuchke.jpg" width="148" height="208" alt="На крючке"/>
@@ -463,7 +457,7 @@
                   </button>
                 </article>
               </div>
-              <div class="popular__slide">
+              <div class="popular__slide swiper-slide">
                 <article class="card">
                   <a class="card__inner" href="index.html#klienty-na-vsyu-zhizn">
                     <img class="card__img" src="img/klienty-na-vsyu-zhizn.jpg" width="148" height="208" alt="Клиенты на всю жизнь"/>
@@ -479,7 +473,7 @@
                   </button>
                 </article>
               </div>
-              <div class="popular__slide">
+              <div class="popular__slide swiper-slide">
                 <article class="card">
                   <a class="card__inner" href="index.html#tsennye-resheniya">
                     <img class="card__img" src="img/tsennye-resheniya.jpg" width="148" height="208" alt="Ценные решения"/>
@@ -495,7 +489,7 @@
                   </button>
                 </article>
               </div>
-              <div class="popular__slide">
+              <div class="popular__slide swiper-slide">
                 <article class="card">
                   <a class="card__inner" href="index.html#na-kryuchke">
                     <img class="card__img" src="img/na-kryuchke.jpg" width="148" height="208" alt="На крючке"/>
@@ -510,7 +504,7 @@
                   </button>
                 </article>
               </div>
-              <div class="popular__slide">
+              <div class="popular__slide swiper-slide">
                 <article class="card">
                   <a class="card__inner" href="index.html#iskrenniy-servis">
                     <img class="card__img" src="img/iskrenniy-servis.jpg" width="148" height="208" alt="Искренний сервис"/>
@@ -526,10 +520,21 @@
                 </article>
               </div>
             </div>
+             <div class="popular__slider-btn popular__slider-btn--left" id="popular-slider-left">
+                <svg width="34" height="23">
+                  <use xlink:href="#arrow-left"></use>
+                </svg>
+              </div>
+              <div class="popular__slider-btn popular__slider-btn--right" id="popular-slider-right">
+                <svg width="34" height="23">
+                  <use xlink:href="#arrow-right"></use>
+                </svg>
+              </div>
+          </div>
           </div>
         </section>
         <!-- Дописать modal--open для показа именного этого модального окна (плюс дописать на html класс js-modal-open)-->
-        <div class="modal" id="modal-book-view" tabindex="-1" role="dialog">
+        <div class="modal"  id="modal-book-view" tabindex="-1" role="dialog">
           <div class="modal__dialog" role="document">
             <div class="modal__content">
               <button class="modal__close" data-dismiss="modal" aria-label="Закрыть">
@@ -647,9 +652,11 @@
       </div>
     </div>
     <script src="js/choices.min.js"></script>
-    <script src="js/nouislider.min.js"></script>
+    <script src="js/nouislider.min.js"></script> 
+    <script src="js/data.js"></script>
     <script src="js/script.js"></script>
-     <script src="js/data.js"></script>
+    <script src="js/swiper.min.js"></script>
+    
  <div class="modal__backdrop"></div>
   </body>
 </html>
