--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                   <img class="card__img" src="img/klienty-na-vsyu-zhizn.jpg" width="148" height="208" alt="Клиенты на всю жизнь"/>
                   <h2 class="card__title">Клиенты на всю жизнь</h2>
                   <span class="card__new">new</span>
-                  <p class="card__price">697 ₽</p>
+                  <p class="card__price">₽</p>
                 </a>
                 <button class="btn  btn--sm card__buy">
                   <svg class="btn__icon" width="14" height="14">
@@ -591,7 +591,7 @@
                   <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Точках знаках, образ рукописи ты безорфографичный снова ведущими пустился коварный о бросил дорогу текстов заголовок домах, даль гор? На берегу, лучше.</p>
                   <div class="product__actions">
                     <button class="btn  btn--price">
-                      1 042 ₽
+                      <span class="btn__sm-price">1 042 ₽</span>
                       <span class="btn__sm-text">
                         <svg class="btn__icon" width="14" height="14">
                           <use xlink:href="#plus"></use>
