--- a/cart.html
+++ b/cart.html
@@ -77,7 +77,7 @@
       <div class="page__content">
         <header class="page-header" role="banner">
           <div class="page-header__inner">
-            <a class="logo" href="/">
+            <a class="logo" href="index.html">
               <strong>EPIC BOOKS</strong>
             </a>
             <nav class="main-nav page-header__nav" id="nav">
@@ -87,13 +87,13 @@
               <!-- Дописать класс main-nav--open на узел с классом main-nav для раскрытия меню на мобилке. Дописать класс burger--close на узел с классом burger для преобразования в крестик-->
               <ul class="main-nav__list">
                 <li class="main-nav__item">
-                  <a class="main-nav__link" href="/">Книги</a>
+                  <a class="main-nav__link" href="index.html">Книги</a>
                 </li>
                 <li class="main-nav__item">
-                  <a class="main-nav__link" href="/recomendations.html">Рекомендации</a>
+                  <a class="main-nav__link" href="#">Рекомендации</a>
                 </li>
                 <li class="main-nav__item">
-                  <a class="main-nav__link" href="/delivery.html">Доставка и контакты</a>
+                  <a class="main-nav__link" href="#">Доставка и контакты</a>
                 </li>
               </ul>
             </nav>
@@ -133,7 +133,7 @@
           </div>
         </header>
         <section class="cart">
-          <form class="form cart__inner">
+          <form class="form cart__inner"  name="orderForm">
             <header class="cart__header">
               <h1 class="cart__title">В корзине 99992 товара</h1>
               <button class="btn  btn--text cart__clear-btn" type="button">Очистить корзину</button>
@@ -146,63 +146,39 @@
                 <th class="cart__col-4">Цена</th>
                 <th class="cart__col-5"></th>
               </tr>
-              <tr class="cart__product">
-                <td class="cart__col-1">
-                  <img class="cart__item-img" src="img/tsennye-resheniya.jpg" alt="Ценные решения">
-                </td>
-                <td class="cart__col-2">
-                  <div class="cart__item-name">Название какие-то очень длинное, совершенно невменяемое для книгоиздателя</div>
-                </td>
-                <td class="cart__col-3">
-                  <div class="field-num  field-num--bg-tran">
-                    <span class="field-num__input-wrap">
-                      <button class="field-num__btn-minus" type="button">-</button>
-                      <input class="field-num__input" type="number" value="2" step="1" min="1"/>
-                      <button class="field-num__btn-plus" type="button">+</button>
-                    </span>
-                  </div>
-                </td>
-                <td class="cart__col-4">
-                  <span class="cart__item-price">1 024 ₽</span>
-                </td>
-                <td class="cart__col-5">
-                  <button class="close cart__product-del-btn" type="button">
-                    <svg width="16" height="16">
-                      <use xlink:href="#close"></use>
-                    </svg>
-                  </button>
-                </td>
-              </tr>
-              <tr class="cart__product">
-                <td class="cart__col-1">
-                  <img class="cart__item-img" src="img/tsennye-resheniya.jpg" alt="Ценные решения">
-                </td>
-                <td class="cart__col-2">
-                  <div class="cart__item-name">Название</div>
-                </td>
-                <td class="cart__col-3">
-                  <div class="field-num  field-num--bg-tran">
-                    <span class="field-num__input-wrap">
-                      <button class="field-num__btn-minus" type="button">-</button>
-                      <input class="field-num__input" type="number" value="1" step="1" min="1"/>
-                      <button class="field-num__btn-plus" type="button">+</button>
-                    </span>
-                  </div>
-                </td>
-                <td class="cart__col-4">
-                  <span class="cart__item-price">999 024 ₽</span>
-                </td>
-                <td class="cart__col-5">
-                  <button class="close cart__product-del-btn" type="button">
-                    <svg width="16" height="16">
-                      <use xlink:href="#close"></use>
-                    </svg>
-                  </button>
-                </td>
-              </tr>
+              <template id="shopping-template">
+                <tr class="cart__product">
+                  <td class="cart__col-1">
+                    <img class="cart__item-img" alt=""/>
+                  </td>
+                  <td class="cart__col-2">
+                    <div class="cart__item-name"></div>
+                  </td>
+                  <td class="cart__col-3">
+                    <div class="field-num  field-num--bg-tran">
+                      <span class="field-num__input-wrap">
+                        <button class="field-num__btn-minus" type="button">-</button>
+                        <input class="field-num__input" type="number" step="1" min="1"/>
+                        <button class="field-num__btn-plus" type="button">+</button>
+                      </span>
+                    </div>
+                  </td>
+                  <td class="cart__col-4">
+                    <span class="cart__item-price">1 024 ₽</span>
+                  </td>
+                  <td class="cart__col-5">
+                    <button class="close cart__product-del-btn" type="button">
+                      <svg width="16" height="16">
+                        <use xlink:href="#close"></use>
+                      </svg>
+                    </button>
+                  </td>
+                </tr>
+              </template>
+             
               <tr>
                 <td class="cart__products-price" colspan="5">
-                  Итого к оплате: <strong class="cart__products-price-num" id="cart-products-price-num">2 200 ₽</strong>
+                  Итого к оплате: <strong class="cart__products-price-num j-grandTotal" id="cart-products-price-num"></strong>
                 </td>
               </tr>
             </table>
@@ -216,28 +192,32 @@
                     <span class="field-text__input-wrap">
                       <input class="field-text__input" type="text" name="firstname" placeholder="Иван"/>
                     </span>
+                    <span class="form__error" id="firstname__error">поле должно содержать только буквы</span>
                   </label>
                   <label class="field-text  field-text--bg-gray">
                     <span class="field-text__name">Фамилия</span>
                     <span class="field-text__input-wrap">
                       <input class="field-text__input" type="text" name="lastname" placeholder="Помидоров"/>
                     </span>
+                    <span class="form__error" id="lastname__error">поле должно содержать только буквы</span>
                   </label>
                   <label class="field-text  field-text--bg-gray">
                     <span class="field-text__name">Телефон</span>
                     <span class="field-text__input-wrap">
                       <input class="field-text__input" type="tel" name="phone" placeholder="+7 812 000 00 00"/>
                     </span>
+                    <span class="form__error" id="phone__error">формат тел: +7 222 222 22 22</span>
                   </label>
                   <label class="field-text  field-text--bg-gray">
                     <span class="field-text__name">E-mail</span>
                     <span class="field-text__input-wrap">
-                      <input class="field-text__input" type="email" name="name" placeholder="user@mail.com"/>
+                      <input class="field-text__input" type="email" name="email" placeholder="user@mail.com"/>
                     </span>
+                    <span class="form__error" id="email__error">неверный формат адреса</span>
                   </label>
                 </div>
               </fieldset>
-              <fieldset class="form__fieldset">
+              <fieldset class="form__fieldset" id="deliverySection">
                 <legend class="form__legend">2. Доставка и адрес</legend>
                 <div class="field-radio">
                   <div class="field-radio__title">Способ доставки</div>
@@ -363,21 +343,21 @@
                   </div>
                 </div>
                 <!-- field-text--input-error для ошибочного состояния поля с промокодом-->
-                <label class="field-text  field-text--bg-gray field-text--promocode field-text--input-checked cart__promocode">
+                <label class="field-text  field-text--bg-gray field-text--promocode field-text--input-checked cart__promocode" style="display:none;">
                   <span class="field-text__name">Промокод</span>
                   <span class="field-text__input-wrap">
                     <input class="field-text__input" type="text" value="CORRECT_CODE" name="promocode"/>
                   </span>
                 </label>
-                <p class="checkout__discount">
+                <p class="checkout__discount" style="display:none;">
                   Скидка: <strong class="checkout__discount-num" id="checkout-discount-num">- 150 ₽</strong>
                 </p>
               </fieldset>
               <div class="field-actions">
                 <p class="checkout__all-price">
-                  Итого к оплате: <strong class="checkout__price">2 200 ₽</strong>
+                  Итого к оплате: <strong class="checkout__price j-grandTotal"></strong>
                 </p>
-                <button class="btn  btn--shadow">Оплатить</button>
+                <button class="btn  btn--shadow" type="submit">Оплатить</button>
                 <p class="checkout__conditions">
                   Нажимая на кнопку, вы принимаете условия <a href="#">Публичной оферты</a>
                 </p>
@@ -431,9 +411,16 @@
         </footer>
       </div>
     </div>
+    <script src="js/shoppingCart.js"></script>
     <script src="js/choices.min.js"></script>
     <script src="js/nouislider.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/cart.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function(){
+        initCart();
+      });
+    </script>
     <div class="modal__backdrop"></div>
   </body>
 </html>
